# getopt_research

./: Cargo.toml  README.md  reserach.rs
getopt-rs/: Cargo.toml
getopt-rs-help/: Cargo.toml
getopt-rs-help/src/: lib.rs
getopt-rs-macro/: Cargo.toml
getopt-rs-macro/src/: lib.rs
getopt-rs/src/: arg.rs  callback.rs  ctx.rs  error.rs  getopt.rs  help.rs  id.rs  lib.rs  nonopt.rs  opt.rs  parser.rs  proc.rs  set.rs  utils.rs
getopt-rs/src/src/: arg.rs  callback.rs  error.rs  getopt.rs  lib.rs  opt.rs  parser.rs  proc.rs
src/: bool.rs  creator.rs  ctx.rs  err.rs  id.rs  main.rs  opt.rs  parser.rs  proc.rs  set.rs  str.rs  utils.rs
src/getopt-rs/: Cargo.toml
src/getopt-rs/src/: arg.rs  opt.rs  proc.rs  utils.rs
