[package]
name = "getopt_main"
version = "0.1.0"
authors = ["lance"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopt-rs = { path = "getopt-rs", features = [ ] }
simplelog = "0.10.0"
regex = "*"
async-std = {version = "1.9", features = [ "attributes", "std" ]}
async-trait = "0.1"