[package]
name = "getopt_main"
version = "0.1.0"
authors = ["lance"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getopt-rs = { path = "getopt-rs", features = [  ] }
getopt-rs-macro = { path = "getopt-rs-macro", features = [  ] }
simplelog = "0.10.0"
regex = "*"
async-std = {version = "1.9", features = [ "attributes", "std" ]}
async-trait = "0.1"

[features]
async = ["getopt-rs/async", "getopt-rs-macro/async"]