[package]
name = "getopt-rs"
version = "0.1.0"
authors = ["lance"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"
async-trait = "0.1"
getopt-rs-macro = { path = "../getopt-rs-macro", features = [ ] }

[features]
async = []